<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">Seu Gasto Total Será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_total">R$ 0</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="informe_valores_validos">Por favor informe valores válidos!</string>
    <string name="informar_valores_validos">Informe valores válidos!</string>
</resources>